--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">GeoAlarm</string>
+    <string name="txtLocation">Ubicación</string>
+    <string name="edtLocation">e.j. Calzada de Los Reyes</string>
+    <string name="txtTitle">Título</string>
+    <string name="txtDescription">Descripción</string>
+    <string name="btnCancel">Cancelar</string>
+    <string name="btnSave">Guardar</string>
 </resources>
